Fixed canvas being oversized on smaller screen sizes

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,10 @@ body {
 	text-align: center;
 }
 
+canvas {
+	max-width: 100%;
+}
+
 .hidden {
 	display: none;
 }
